--- a/public/shpsholidayhometour.com/files/hhtCSS.css
+++ b/public/shpsholidayhometour.com/files/hhtCSS.css
@@ -78,8 +78,9 @@ A:hover {
 	FONT-SIZE: 10px; COLOR: #000000; FONT-STYLE: normal; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; TEXT-DECORATION: none
 }
 .leftnavtext A:hover {
-	FONT-SIZE: 10px; COLOR: #000000; FONT-STYLE: normal; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; TEXT-DECORATION: underline
+	FONT-SIZE: 10px; COLOR: #aa0000; FONT-STYLE: normal; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; TEXT-DECORATION: none
 }
+
 .indexnavtext {
 	FONT-SIZE: 11px; COLOR: #000000; FONT-STYLE: normal; FONT-FAMILY: verdana,arial,tahoma
 }
@@ -115,4 +116,4 @@ padding:10px; margin:10px 0; text-align:center;}
 padding:10px; margin:10px 0; text-align:center;}
 .datatable-divx form{margin:0px;}
 
-
+.sponsors img{border:1px solid #999;}
